:bug: Fixed alignment in function navigation row and removed unnecesary margins

--- a/packages/mechanic-template/app/components/Nav.css
+++ b/packages/mechanic-template/app/components/Nav.css
@@ -3,12 +3,12 @@
 }
 
 .row {
-	display: flex;
+    display: flex;
+    align-items: center;
 	justify-content: space-between;
 }
 
 .label {
-    padding: 1em 1em;
     flex-grow: 1;
     text-align: center;
     font-weight: bolder;
