--- a/packages/mechanic-template/app/components/input/Button.css
+++ b/packages/mechanic-template/app/components/input/Button.css
@@ -6,14 +6,9 @@
 	-webkit-appearance: none;
 	cursor: pointer;
 	padding: 0.5em 1em;
-	margin-bottom: 1em;
 	background-color: white;
     border: 1px solid var(--text);
     font-weight: bold;
-}
-
-.root:not(:last-child) {
-    margin-right: 0.5rem;
 }
 
 .root:active {
